--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "exports": "./app.js",
   "scripts": {
     "dev": "nodemon app.js --watch",
-    "prod": "node app.js"
+    "start": "node app.js"
   },
   "author": "LL",
   "dependencies": {
